apps/dmrhub/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: dmr-udp-input
  namespace: dmrhub
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.254.1,fdeb:abba:237c:dead:0001::1
spec:
  type: LoadBalancer
  loadBalancerClass: metallb
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  externalTrafficPolicy: Local
  internalTrafficPolicy: Cluster
  selector:
    app.kubernetes.io/instance: dmrhub
  ports:
    - name: udp-dmr
      protocol: UDP
      port: 62031
      targetPort: 62031
    - name: udp-openbridge
      protocol: UDP
      port: 62035
      targetPort: 62035
