apps/dmrhub/networkpolicy-dmr.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dmrhub-dmr
  namespace: dmrhub
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: dmrhub
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: aredn-dmrhub
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: UDP
      port: 62031
    - protocol: UDP
      port: 62035
