apps/dmrhub/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dmrhub
  namespace: dmrhub
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: dmrhub
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nginx
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: dmrhub
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
            - 100.64.0.0/10
